changed md file orders

--- a/src/pages/videos/10.md
+++ b/src/pages/videos/10.md
@@ -1,8 +1,16 @@
 ---
-title: "Paper Boy On the Street: Food and Celebrities (Part 2)"
-date: "2019-02-22"
-embed: "zAxefn2xkx0"
-tags: ["Gatsbyjs","JavaScript","Social","paper boy","paper boy the prince of the suburbs","prince of the suburbs","haha paper","haha paper yeah","celebrity","celebrities","talk show","man on the street","street interviews","web series","webisode","brooklyn","new york","nyc","new york city","Broadway","food","sprint","street interview","bushwick","performer","performance artist","performance art"]
+title: "Oh Crap -- I'm a Brony! (Documentary)"
+date: "2012-02-20"
+embed: "6NsRy1qgLgA"
+tags: ["Gatsbyjs","JavaScript","Social","oh crap im a brony","brony","bronies","documentary","short film","furry","furries","online community","internet community","nonstop","strat","radar","drew rosenthal","eaglehooves","columbus ohio","peanut bucker","brony community","brohoof","nerds","drax","dovah","brony meetups","fursona","television show","my little pony","friendship is magic","acceptance","tolerance","oberlin","oberlin college","friendship","Friends","ponies","pony","tv show","cine 320"]
 ---
 
-HAHA PAPER YEAH! Paper Boy the Prince of the Suburbs is at it again. He’s on a mission to find out Brooklyn’s favorite foods and celebrities.
+Documentary film about the brony community made for CINE 320 at Oberlin College.
+
+A film by:
+Drew Rosenthal
+Max Mueller
+Claire Watson
+Brenna Sheldon
+
+We do not claim ownership or intend to sell the material from My Little Pony: Friendship is Magic or the soundtrack used in this film.
