--- a/src/pages/videos/11.md
+++ b/src/pages/videos/11.md
@@ -1,22 +1,18 @@
 ---
-title: "The Type - Yellow Jacket (Music Video)"
-date: "2019-02-08"
-embed: "rHilkoEasko"
-tags: ["Gatsbyjs","JavaScript","Social","jason trachtenbburg","trachtenburg","mother pigeon","Music video","yellow jacket","brooklyn","pop music","pop band","psychedelic","local band","local bands","new york city","nyc","trachtenburg family slideshow players","magali charron","jake strauss","folk","jfK","john f kennedy","kennedy","conspiracy","bk","60s"]
+title: "You Can't Scream in Space"
+date: "2011-02-11"
+embed: "FJEN5pkNQFM"
+tags: ["Gatsbyjs","JavaScript","Social","space","outer space","oberlin college","space","astronomy","morphing","morph","glitch","space travel","green screen","screaming","scream","experimental"]
 ---
 
-Brooklyn's newest pop band, The Type, presents Yellow Jacket ©2019 Jason Trachtenburg. 
+"You Can't Scream in Space" is a riveting film about people screaming in space.
 
-The Type
-Jason Trachtenburg - Guitar
-Jake Strauss - Bass
-Magali Charron - Violin
-Miles Stenhouse - Percussion, Keys
-Sam Grossman - Harmony Vocals
+Directed by Drew Rosenthal
 
-"Yellow Jacket" by The Type
-Produced and Engineered by Miles Stenhouse
-Mastered by Vin Cacchione
-
-Music Video
-Created by Drew Rosenthal (Be Happy For Once Productions)
+Models: Charlie Hartford
+Drew Rosenthal
+Sam Wright-Fairbanks
+Amanda Lim-Bonner
+John Pellman
+Kyle Aungst
+Ann Linger
