--- a/src/pages/videos/2.md
+++ b/src/pages/videos/2.md
@@ -1,18 +1,10 @@
 ---
-title: "You Can't Scream in Space"
-date: "2011-02-11"
-embed: "FJEN5pkNQFM"
-tags: ["Gatsbyjs","JavaScript","Social","space","outer space","oberlin college","space","astronomy","morphing","morph","glitch","space travel","green screen","screaming","scream","experimental"]
+title: "Band Nightmares Episode 1: Gusto (8Ball TV Cut)"
+date: "2019-01-24"
+embed: "8nShhxqaU8s"
+tags: ["Gatsbyjs","JavaScript","Social","gene baker","reality tv","web series","webisode","web show","Nyc","new york city","pop star","famous","celebrity","musician","pop musician","pop star","pop sensation","internet show","guitarist","local band","local bands","foxanne","8ball","glitch art","glitch","power horse","television show","tv show","first episode","episode 1","episode","music business","music industry","performance artist","performance art","kitchen nightmares","pilot episode"]
 ---
 
-"You Can't Scream in Space" is a riveting film about people screaming in space.
+The pilot episode of Band Nightmares now on 8ball TV! Enjoy this special cut.
 
-Directed by Drew Rosenthal
-
-Models: Charlie Hartford
-Drew Rosenthal
-Sam Wright-Fairbanks
-Amanda Lim-Bonner
-John Pellman
-Kyle Aungst
-Ann Linger
+From Los Angeles to Brooklyn and back, pop sensation and cultural paragon Gene Baker has been in the music business for over 30 years. Now that he has terminated his contract with Universal Records, Gene presents to you a new reality TV show. In Band Nightmares, Gene steps up to help Brooklyn based band Foxanne fix their sound.
