--- a/src/pages/videos/3.md
+++ b/src/pages/videos/3.md
@@ -1,10 +1,39 @@
 ---
-title: "Matthew McConaughey Dazed and Confused in Dallas Buyers Club"
-date: "2014-08-29"
-embed: "nMdNf4JM4Mw"
-tags: ["Gatsbyjs","JavaScript","Social","Sam wf","Sam wright fairbanks","matthew mcconaughey","dazed and confused","Dallas buyers club","alright alright alright","Matthew mcconaughey crying","crying in car","alright","glitch","glitched","computer glitch","digital art","tech art","digital artist","data mosh","datamosh","data moshing","datamoshing","databending"]
+title: "Band Nightmares Episode 2: Astrological Disturbance"
+date: "2019-04-20"
+embed: "3PcTea4w7ss"
+tags: ["Gatsbyjs","JavaScript","Social","gene baker","reality tv","web series","tv series","web show","Nyc","new york city","brooklyn","pop star","famous","celebrity","musician","pop star","pop sensation","internet show","guitarist","local band","local bands","bands","lavender","comedy","adult swim","hope diamond","astrology","glitch art","glitch","data mosh","meme","memes","tv show","episode 2","episode","music business","music industry","cult of hope","performance art","kitchen nightmares"]
 ---
 
-Thoughts on Matthew McConaughey's alright alright alright performance in Dallas Buyers Club.
+Astrological Disturbance is Episode 2 of the hit show Band Nightmares. Celebrity pop icon Gene Baker works tirelessly to help #MILLENNIALS in #BROOKLYN fix their sound so that they may enter the music business confidently and with guaranteed success. After discovering Hope Diamond at an open mic, he decides that in order to reach success she must learn that there is no astrological basis in the music business.
 
-Soundtrack: Sam WF
+Directed by
+Drew Rosenthal (Be Happy For Once Productions)
+King Bop @kingbeebop
+
+Edited by
+Drew Rosenthal @behappyforonceproductions
+
+Sound Design by
+Drew Rosenthal @behappyforonceproductions
+Sam Wright Fairbanks @multigaybread
+
+Cast
+Gene Baker as Himself @gene_baker69
+Hope Diamond as Herself @cultofhope
+Veronica Burnham as Newscaster #1 @verquantumica
+Melissa Ewing as Newscaster #2 @melissa.ewing
+
+Cinematography
+Drew Rosenthal @behappyforonceproductions
+King Bop @kingbeebop
+Max Mueller (Sidewalk Cafe sequence)
+
+Voiceover
+Gene Baker @gene_baker69
+Natasha Masson @natashamasson85
+
+SPIT (opening soundtrack for tarot sequence)
+Paul Jordan Talbot @quireband
+
+Special thanks to Sidewalk Cafe (RIP) and Caffeine Underground
