--- a/src/pages/videos/7.md
+++ b/src/pages/videos/7.md
@@ -1,10 +1,8 @@
 ---
-title: "Scott Walker's Unborn Child"
-date: "2015-09-13"
-embed: "IloBvODD_6Q"
-tags: ["Gatsbyjs","JavaScript","Social","glitch","glitched","Data moshing",datamoshing","datamosh","datamoshed","glitching","computer glitch","tech art","media art","digital art","digital artist","media artist","tech artist","scott walker","Fox news","2016 debate","republican presidential primary debate","abortion","fetus","unborn child","gop debate","conservative","planned parenthood","politics","republican debate"]
+title: "Paper Boy On the Street: Food and Celebrities (Part 2)"
+date: "2019-02-22"
+embed: "zAxefn2xkx0"
+tags: ["Gatsbyjs","JavaScript","Social","paper boy","paper boy the prince of the suburbs","prince of the suburbs","haha paper","haha paper yeah","celebrity","celebrities","talk show","man on the street","street interviews","web series","webisode","brooklyn","new york","nyc","new york city","Broadway","food","sprint","street interview","bushwick","performer","performance artist","performance art"]
 ---
 
-Scott Walker explains his conservative position on abortion on the 2016 Fox News Republican Presidential Primary Debate. What a great guy.
-
-Thank you Fox News!
+HAHA PAPER YEAH! Paper Boy the Prince of the Suburbs is at it again. He’s on a mission to find out Brooklyn’s favorite foods and celebrities.
