--- a/src/pages/videos/9.md
+++ b/src/pages/videos/9.md
@@ -1,10 +1,11 @@
 ---
-title: "Paper Boy On the Street: Food and Celebrities (Part 1)"
-date: "2019-01-31"
-embed: "UmNs0ggXimM"
-tags: ["Gatsbyjs","JavaScript","Social","paper boy","paper boy the prince of the suburbs","prince of the suburbs","haha paper","haha paper yeah","celebrity","celebrities","talk show","man on the street","street interviews","web series","webisode","brooklyn","new york","nyc","new york city","Broadway","food","sprint","street interview","bushwick","performer","performance artist","performance art"]
+title: "Pinkie Promise - Shadow Dancer (Acoustic Session)"
+date: "2019-01-24"
+embed: "2aRSmGWsr00"
+tags: ["Gatsbyjs","JavaScript","Social","tiny desk concert","tiny desk","music video","local band","local band","acoustic session","brooklyn","nyc","new york city","folk","pop"]
 ---
 
-We're excited to bring on Paper Boy the Prince of the Suburbs as a new collaborator! Look out for new content, as well as a live talk show. HAHA PAPER YEAH!
+Is this a Tiny Desk Concert or a music video? YOU DECIDE! The Pinkie Promise debut album, 'Pinkie Promise,' is out now!
 
-Paper drops by the Sprint store to see if their taste in food and culture is better than their phone service
+Directed, Filmed, & Edited by Drew Rosenthal
+Audio Engineered, Mixed & Mastered by stoovxia
