--- a/src/pages/videos/13.md
+++ b/src/pages/videos/13.md
@@ -1,10 +1,12 @@
 ---
-title: "Gene Baker Presents: Band Nightmares (8Ball TV Cut)"
-date: "2019-01-24"
-embed: "8nShhxqaU8s"
-tags: ["Gatsbyjs","JavaScript","Social","gene baker","reality tv","web series","webisode","web show","Nyc","new york city","pop star","famous","celebrity","musician","pop musician","pop star","pop sensation","internet show","guitarist","local band","local bands","foxanne","8ball","glitch art","glitch","power horse","television show","tv show","first episode","episode 1","episode","music business","music industry","performance artist","performance art","kitchen nightmares","pilot episode"]
+title: "Laura Dern's Nightmare"
+date: "2014-08-29"
+embed: "urd6JE7M4EA"
+tags: ["Gatsbyjs","JavaScript","Social","glitch","glitched","Data moshing",datamoshing","datamosh","datamoshed","glitching","computer glitch","tech art","media art","digital art","digital artist","media artist","tech artist","jurassic park","laura dern","jeff goldblum","Data bending","data bend","meme","memes","t-rex","Dinosaur"]
 ---
 
-The pilot episode of Band Nightmares now on 8ball TV! Enjoy this special cut.
+Laura Dern's nightmare from that time she was attacked by a t-rex.
 
-From Los Angeles to Brooklyn and back, pop sensation and cultural paragon Gene Baker has been in the music business for over 30 years. Now that he has terminated his contract with Universal Records, Gene presents to you a new reality TV show. In Band Nightmares, Gene steps up to help Brooklyn based band Foxanne fix their sound.
+Source: Jurassic Park
+
+Dedicated to Sam WF
