--- a/src/pages/videos/4.md
+++ b/src/pages/videos/4.md
@@ -1,16 +1,8 @@
 ---
-title: "Oh Crap -- I'm a Brony! (Documentary)"
-date: "2012-02-20"
-embed: "6NsRy1qgLgA"
-tags: ["Gatsbyjs","JavaScript","Social","oh crap im a brony","brony","bronies","documentary","short film","furry","furries","online community","internet community","nonstop","strat","radar","drew rosenthal","eaglehooves","columbus ohio","peanut bucker","brony community","brohoof","nerds","drax","dovah","brony meetups","fursona","television show","my little pony","friendship is magic","acceptance","tolerance","oberlin","oberlin college","friendship","Friends","ponies","pony","tv show","cine 320"]
+title: "Behind the Baker: Dating (Full Episode)"
+date: "2019-02-20"
+embed: "BdIG4rgf7AQ"
+tags: ["Gatsbyjs","JavaScript","Social","gene baker","reality tv","web series","webisode","web show","dating","Nyc","new york city","manhattan","tinder","pop star","famous","celebrity","tmz","love","romance","eugene baker","bar","bars","the library","behind the scenes","date","amanda","dating life","musician","pop musician","pop star","online dating","dating apps","internet show","astrology","gemini","flat affect","behind the baker","sagittarius","documentary","madonna","guitarist","tv show"]
 ---
 
-Documentary film about the brony community made for CINE 320 at Oberlin College.
-
-A film by:
-Drew Rosenthal
-Max Mueller
-Claire Watson
-Brenna Sheldon
-
-We do not claim ownership or intend to sell the material from My Little Pony: Friendship is Magic or the soundtrack used in this film.
+Just because Gene Baker is famous doesn't mean he isn't on Tinder. Be Happy For Once Productions takes you behind the scenes of NYC dating life to show you what happens when the pop legend tries to find love in the city.
