--- a/src/pages/videos/5.md
+++ b/src/pages/videos/5.md
@@ -1,12 +1,22 @@
 ---
-title: "Laura Dern's Nightmare"
-date: "2014-08-29"
-embed: "urd6JE7M4EA"
-tags: ["Gatsbyjs","JavaScript","Social","glitch","glitched","Data moshing",datamoshing","datamosh","datamoshed","glitching","computer glitch","tech art","media art","digital art","digital artist","media artist","tech artist","jurassic park","laura dern","jeff goldblum","Data bending","data bend","meme","memes","t-rex","Dinosaur"]
+title: "The Type - Yellow Jacket (Music Video)"
+date: "2019-02-08"
+embed: "rHilkoEasko"
+tags: ["Gatsbyjs","JavaScript","Social","jason trachtenbburg","trachtenburg","mother pigeon","Music video","yellow jacket","brooklyn","pop music","pop band","psychedelic","local band","local bands","new york city","nyc","trachtenburg family slideshow players","magali charron","jake strauss","folk","jfK","john f kennedy","kennedy","conspiracy","bk","60s"]
 ---
 
-Laura Dern's nightmare from that time she was attacked by a t-rex.
+Brooklyn's newest pop band, The Type, presents Yellow Jacket ©2019 Jason Trachtenburg. 
 
-Source: Jurassic Park
+The Type
+Jason Trachtenburg - Guitar
+Jake Strauss - Bass
+Magali Charron - Violin
+Miles Stenhouse - Percussion, Keys
+Sam Grossman - Harmony Vocals
 
-Dedicated to Sam WF
+"Yellow Jacket" by The Type
+Produced and Engineered by Miles Stenhouse
+Mastered by Vin Cacchione
+
+Music Video
+Created by Drew Rosenthal (Be Happy For Once Productions)
