--- a/src/pages/videos/8.md
+++ b/src/pages/videos/8.md
@@ -1,11 +1,10 @@
 ---
-title: "Pinkie Promise - Shadow Dancer (Acoustic Session)"
-date: "2019-01-24"
-embed: "2aRSmGWsr00"
-tags: ["Gatsbyjs","JavaScript","Social","tiny desk concert","tiny desk","music video","local band","local band","acoustic session","brooklyn","nyc","new york city","folk","pop"]
+title: "Matthew McConaughey Dazed and Confused in Dallas Buyers Club"
+date: "2014-08-29"
+embed: "nMdNf4JM4Mw"
+tags: ["Gatsbyjs","JavaScript","Social","Sam wf","Sam wright fairbanks","matthew mcconaughey","dazed and confused","Dallas buyers club","alright alright alright","Matthew mcconaughey crying","crying in car","alright","glitch","glitched","computer glitch","digital art","tech art","digital artist","data mosh","datamosh","data moshing","datamoshing","databending"]
 ---
 
-Is this a Tiny Desk Concert or a music video? YOU DECIDE! The Pinkie Promise debut album, 'Pinkie Promise,' is out now!
+Thoughts on Matthew McConaughey's alright alright alright performance in Dallas Buyers Club.
 
-Directed, Filmed, & Edited by Drew Rosenthal
-Audio Engineered, Mixed & Mastered by stoovxia
+Soundtrack: Sam WF
