changed md file orders

--- a/src/pages/videos/11.md
+++ b/src/pages/videos/11.md
@@ -5,7 +5,7 @@ embed: "FJEN5pkNQFM"
 tags: ["Gatsbyjs","JavaScript","Social","space","outer space","oberlin college","space","astronomy","morphing","morph","glitch","space travel","green screen","screaming","scream","experimental"]
 ---
 
-"You Can't Scream in Space" is a riveting film about people screaming in space.
+You Can't Scream in Space is a riveting film about people screaming in space.
 
 Directed by Drew Rosenthal
 
