--- a/src/pages/videos/10.md
+++ b/src/pages/videos/10.md
@@ -1,5 +1,5 @@
 ---
-title: "Oh Crap -- I'm a Brony! (Documentary)"
+title: "Oh Crap - I'm a Brony! (Documentary)"
 date: "2012-02-20"
 embed: "6NsRy1qgLgA"
 tags: ["Gatsbyjs","JavaScript","Social","oh crap im a brony","brony","bronies","documentary","short film","furry","furries","online community","internet community","nonstop","strat","radar","drew rosenthal","eaglehooves","columbus ohio","peanut bucker","brony community","brohoof","nerds","drax","dovah","brony meetups","fursona","television show","my little pony","friendship is magic","acceptance","tolerance","oberlin","oberlin college","friendship","Friends","ponies","pony","tv show","cine 320"]
